--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,12 @@
   border: 1px solid rgb(155, 145, 145);
 }
 
-.list-items h3 {
+.istItems h3 {
   text-align: left;
   padding-bottom: 2px;
 }
 
-.list-items {
+.listItems {
   width: 400px;
   justify-content: center;
   list-style: none;
@@ -125,7 +125,7 @@ hr {
   outline: none;
 }
 
-.list-items1 {
+.listItems1 {
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -136,7 +136,7 @@ hr {
   margin: auto;
 }
 
-.list-items1 hr {
+.listItems1 hr {
   width: 109.5%;
 }
 
@@ -148,6 +148,6 @@ hr {
   position: relative;
   top: 60px;
   z-index: 1000;
-  left: 12rem;
+  left: 52rem;
   color: rgb(156, 149, 149);
 }
